# rtsp-rs

./: Cargo.toml
examples/: server.rs
src/: lib.rs  request.rs  response.rs  server.rs
src/protocol/codec/: mod.rs
src/protocol/codec/decoder/: request.rs
src/protocol/connection/: handler.rs
src/uri/: request.rs
tests/: connection_shutdown_tests.rs
