[package]
authors = ["Scott Godwin <sgodwincs@gmail.com>"]
edition = "2018"
name = "rtsp"
version = "0.1.0"

[[bench]]
harness = false
name = "decode"

[[bench]]
harness = false
name = "encode"

[[bench]]
harness = false
name = "uri"

[dependencies]
bytes = "^0.5.0"
chrono = "0.4.6"
futures = "^0.3.0"
itertools = "0.8.0"
lazy_static = "1.3.0"
ordered-multimap = "0.2.2"
rand = "0.6.5"
tokio = { version =  "^0.2.1", features = ["full"] }
tokio-util = { version = "^0.2.0", features = ["full"] }
uriparse = "0.6.1"
fnv = "1.0.6"
linked_hash_set = "0.1.3"
tower-service = "0.2.0"
regex = "1.1.6"
base64 = "0.10.1"

[dependencies.rtp]
git = "https://github.com/sgodwincs/rtp-rs"
rev = "bc88ec0"

[dev-dependencies]
criterion = "0.2.5"
